# registry

./: .gitignore  .pre-commit-config.yaml  README.md  pytest.ini  requirements-test.txt
cli/: build.zig  pyproject.toml
cli/completions/: bash
cli/registry/: main.py
cli/registry/commands/: __init__.py  backup.py  base.py  changes.py  config.py  io.py  packages.py  validate.py
cli/registry/core/: registry.py
cli/src/: main.zig
cli/src/ffi/: bindings.zig  registry.h
definitions/: .~lock.README.md#  README.md  manifest.yaml
lib/: pyproject.toml
lib/libregistry/: __init__.py  api.py  const.py  definitions.py  exceptions.py  logger.py
lib/libregistry/decoder/: __init__.py  base.py  decoder.py  file.py
lib/libregistry/decoder/filetypes/ini/: decoder.py
lib/libregistry/decoder/filetypes/json/: __init__.py  decoder.py
lib/libregistry/decoder/filetypes/key-value/: __init__.py  decoder.py
lib/libregistry/decoder/filetypes/toml/: decoder.py
lib/libregistry/decoder/filetypes/xml/: __init__.py  decoder.py
lib/libregistry/decoder/filetypes/yaml/: decoder.py
lib/libregistry/encoder/: __init__.py  base.py  encoder.py
lib/libregistry/encoder/filetypes/ini/: encoder.py
lib/libregistry/encoder/filetypes/json/: encoder.py
lib/libregistry/encoder/filetypes/key-value/: __init__.py  encoder.py
lib/libregistry/encoder/filetypes/toml/: encoder.py
lib/libregistry/encoder/filetypes/xml/: encoder.py
lib/libregistry/encoder/filetypes/yaml/: encoder.py
lib/libregistry/transformer/: __init__.py  transformer.py
scripts/: build.sh  install.sh  (+1 more)
(+64 files in other folders)
